--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
+    "viem": "^0.3.24",
+    "wagmi": "^1.0.3",
     "web-vitals": "^2.1.4",
     "web3": "^1.10.0"
   },
